[gd_scene load_steps=27 format=2]

[ext_resource path="res://Scenes/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Player/Sprites/player_b.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Player/Sprites/player_a.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 21 ) ],
"loop": true,
"name": "holding_b",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "holding_a",
"speed": 3.5
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "default_b",
"speed": 2.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default_a",
"speed": 1.5
} ]

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 2.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "holding",
"speed": 1.0
} ]

[sub_resource type="CircleShape2D" id=19]
radius = 5.47069

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 9.43851, 3.61722 )

[node name="Player" type="KinematicBody2D" groups=[
"players",
]]
position = Vector2( 0, 7.62939e-06 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 13 )
animation = "holding_b"
playing = true

[node name="AnimatedSprite_b" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 18 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.929 )
shape = SubResource( 19 )

[node name="InteractionArea" type="Area2D" parent="."]
position = Vector2( 7, -5.319 )
collision_layer = 33
collision_mask = 33

[node name="InteractionTimer" type="Timer" parent="InteractionArea"]
wait_time = 0.5
one_shot = true

[node name="InteractionShape" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2( -7.07065, -2.98214 )
shape = SubResource( 20 )
disabled = true

[connection signal="area_entered" from="InteractionArea" to="." method="_on_interactionArea_area_entered"]
[connection signal="area_exited" from="InteractionArea" to="." method="_on_InteractionArea_area_exited"]
[connection signal="timeout" from="InteractionArea/InteractionTimer" to="." method="_on_InteractionTimer_timeout"]
